add book elastic search
