# book/controllers/book.go
@@ -1,9 +1,12 @@
 package controllers
 
 import (
+	"bytes"
 	"errors"
+	"fmt"
 	"github.com/gin-gonic/gin"
 	"go_practice/book/auth"
+	"go_practice/book/elasticsearch"
 	"go_practice/book/logger"
 	"go_practice/book/models"
 	"go_practice/book/structs"
@@ -13,7 +16,7 @@ import (
 	"strconv"
 )
 
-// FindBooks godoc
+// FindUserBooks godoc
 // @Summary      Show Books
 // @Description  get books
 // @Tags         books
@@ -29,7 +32,7 @@ import (
 // @Failure      500  {object}  structs.ErrorResponse
 // @Router       /books [get]
 // @Security BearerAuth
-func (c *Controller) FindBooks(context *gin.Context) {
+func (c *Controller) FindUserBooks(context *gin.Context) {
 
 	var books models.Books
 	var err error
@@ -262,4 +265,61 @@ func (c *Controller) DeleteBook(context *gin.Context) {
 		return
 	}
 	context.JSON(http.StatusNoContent, gin.H{"data": true})
+}
+
+//FindBooks godoc
+//@Summary      Show Authors by Searching
+//@Description  get paginated list of authors by search term
+//@Tags         elastic
+//@Accept       json
+//@Produce      json
+//@Param        page   query  int  false "paginate" Format(int)
+//@Param        limit   query  int  false "paginate" Format(int)
+//@Param        search   query  string  false "name searching" Format(string)
+//@Success      200  {object}  structs.BookElasticPaginatedResponse
+//@Failure      400  {object}  structs.ErrorResponse
+//@Failure      401  {object}  structs.ErrorResponse
+//@Failure      403  {object}  structs.ErrorResponse
+//@Failure      404  {object}  structs.ErrorResponse
+//@Failure      500  {object}  structs.ErrorResponse
+//@Router       /elastic/books [get]
+//@Security BearerAuth
+func (c *Controller) FindBooks(context *gin.Context) {
+
+	var err error
+	var page, limit int
+	var search string
+	tokenString := context.GetHeader("Authorization")
+	err, _ = auth.ValidateToken(tokenString)
+	if err != nil {
+		utils.BaseErrorResponse(context, http.StatusUnauthorized, err, logger.INFO)
+		return
+	}
+
+	if page, err = strconv.Atoi(context.DefaultQuery("page", "1")); err != nil {
+		utils.CustomErrorResponse(context, http.StatusBadRequest, "invalid 'page' param value type, Integer expected", err, logger.INFO)
+		return
+	}
+
+	if limit, err = strconv.Atoi(context.DefaultQuery("limit", "10")); err != nil {
+		utils.CustomErrorResponse(context, http.StatusBadRequest, "invalid 'limit' param value type, Integer expected", err, logger.INFO)
+		return
+	}
+	var buf bytes.Buffer
+
+	search = context.DefaultQuery("search", "")
+
+	from := (page - 1) * limit
+	fmt.Println(search, from, limit)
+	r, err := elasticsearch.GetPaginatedBookSearch(context, from, limit, search, buf, err)
+
+	authorsData := utils.CreateBookListSearchResponse(r)
+	authorStructData := utils.CreateHyperBookElasticResponses(context, authorsData)
+	//
+	paginatedResponse := utils.CreateHyperPaginatedBookResponses(page, limit, authorStructData)
+
+	context.JSON(
+		http.StatusOK,
+		gin.H{"data": paginatedResponse},
+	)
 }
